Role based access implementation by user email
